[package]
name = "anchor_escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_escrow"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = {version = "0.18.2"}
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
uint = "0.8"
spl-associated-token-account = { version = "1.0.3",  features = [ "no-entrypoint" ] }
spl-name-service = { version = "0.2.0", features = ["no-entrypoint"] }
sha2 = "0.9.8"
borsh = "0.9.1"
spl-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
metaplex-token-metadata = {  version = "0.0.1", features = ["no-entrypoint"] }

[dev-dependencies]
proptest = "1.0.0"